# evm-from-scratch

./: README.md  evm.json
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  valids.rs
