[package]
name = "evm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
primitive-types = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers-core = "1"
sha3 = { version = "0.10", default-features = false, features = [] }
